css overflow fix, yugh :(

--- a/sspi_flask_app/home/static/sass/datapage.scss
+++ b/sspi_flask_app/home/static/sass/datapage.scss
@@ -7,29 +7,27 @@ body {
 }
 
 .pagecontent {
-    padding: 2% 2.5%;
+    padding: 2.5% 3%;
 }
 .datawindow {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 95%;
-    margin: 2.5%;
+    width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-color: $home-page-background-color;
     border: 2px;
     border-color: black;
     border-radius: 5px;
     box-shadow: 2px 2px 5px 2px rgba(0, 0, 0, 0.1);
-    overflow: scroll;
 }
 
 .datanav {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    padding: 20px;
+    margin: 20px;
 }
 
 .datanavlink {
@@ -42,16 +40,8 @@ body {
         transition: 0.2s;
     }
 }
-
-#indicator-table {
-    padding: 10px;
-    display: flex;
-    overflow-x: auto;
-    width: 100%;
-    border-spacing: 15px;
-
-}
-
-#dynamic-data-table {
-    overflow: scroll;
+.tabulator-wrapper {
+    position: relative;
+    width: 95%;
+    margin: 0 2.5%;
 }
